--- a/index.html
+++ b/index.html
@@ -16,26 +16,35 @@
         <div class="row">
 
             <div class="col">
-                <div class="isi">
-                    Pay your Postpaid Bill
+                <div class="gambar-pay">
+                    <div class="isi">
+                        Pay your Postpaid Bill
+                    </div>
                 </div>
             </div>
 
             <div class="col">
-                <div class="isi">
-                    Reload your Prepaid Plan
+                <div class="gambar-reload">
+                    <div class="isi">
+                        Reload your Prepaid Plan
+                    </div>
                 </div>
             </div>
 
             <div class="col">
-                <div class="isi">
-                    Get Add-On Internet
+                <div class="gambar-get">
+                    <div class="isi">
+                        Get Add-On Internet
+                    </div>
                 </div>
+
             </div>
 
         </div>
+    
 
-    </div>
+        <h2>NIK DANIA ARIESYA BINTI MOHD RASHIDI</h2>
+
 
 </body>
 
